<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/noteActivityLayout">

<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
    android:layout_height="match_parent"  >


    <ImageView
        android:id="@+id/imageViewBackgroundNotes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="@drawable/gradient_colors"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="149dp"
        android:layout_height="58dp"
        android:fontFamily="@font/syncopate_bold"
        android:radius="20dp"
        android:text="@string/avbryt"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:backgroundTint="#6530D9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.545" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="149dp"
        android:layout_height="58dp"
        android:fontFamily="@font/syncopate_bold"
        android:radius="20dp"
        android:text="@string/spara"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:backgroundTint="#6530D9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.393" />

    <EditText
        android:id="@+id/editTextNote"
        android:layout_width="343dp"
        android:layout_height="106dp"
        android:ems="10"
        android:fontFamily="@font/comfortaa_regular"
        android:gravity="start|top"
        android:hint="@string/editTextNote"
        android:inputType="textMultiLine"
        android:radius="20dp"
        app:backgroundTint="#6530D9"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.194" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textViewAddTitle"
        android:layout_width="339dp"
        android:layout_height="48dp"
        android:fontFamily="@font/comfortaa_regular"
        android:hint="@string/rubrik"
        android:radius="20dp"
        app:backgroundTint="#6530D9"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.361"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.108" />

    <Button
        android:id="@+id/buttonEdit"
        android:layout_width="149dp"
        android:layout_height="58dp"
        android:fontFamily="@font/syncopate_bold"
        android:radius="20dp"
        android:text="@string/uppdatera"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:backgroundTint="#6530D9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.748"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.393" />

    <TextView
        android:id="@+id/textViewDisplayId"
        android:layout_width="66dp"
        android:layout_height="28dp"
        android:fontFamily="serif-monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:layout_goneMarginBottom="2dp"
        app:menu="@menu/navmenu">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>


</layout>