<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/listLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp">

    <!--    android:foreground="@drawable/note"-->
<!--    app:srcCompat="@drawable/note"-->

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageViewNoteBackground"
        android:layout_width="360dp"
        android:layout_height="42dp"
        android:background="@drawable/gradient_white"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.106"
        app:shapeAppearanceOverlay="@style/roundedListItemsImageView"/>

    <!--    android:radius="20dp"-->
<!--    android:text="@string/andra"-->

<!--    android:textColor="@color/white"-->
<!--    android:textSize="20sp"-->
<!--    android:textStyle="bold"-->
<!--    app:backgroundTint="#6530D9"-->

    <TextView
        android:id="@+id/textViewNoteTitle"
        android:layout_width="158dp"
        android:layout_height="42dp"
        android:fontFamily="@font/comfortaa_regular"
        android:gravity="center"
        android:text="@string/rubrik"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="@+id/imageViewNoteBackground"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.103" />

    <TextView
        android:id="@+id/textViewNote"
        android:layout_width="241dp"
        android:layout_height="166dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/textIntroSocial"
        android:text="@string/anteckning"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNoteTitle"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/imageButtonDelete"
        android:layout_width="50dp"
        android:layout_height="42dp"
        android:layout_marginStart="124dp"
        android:backgroundTint="@android:color/transparent"
        android:gravity="center"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageViewNoteBackground"
        app:layout_constraintStart_toEndOf="@+id/textViewNoteTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.103"
        app:srcCompat="@android:drawable/ic_delete"
        app:tint="#6530D9"
        tools:visibility="visible" />

    <ImageButton
        android:id="@+id/imageButtonEdit"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginEnd="80dp"
        android:backgroundTint="@android:color/transparent"
        android:gravity="center"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewNoteBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textViewNoteTitle"
        app:layout_constraintTop_toTopOf="@+id/imageViewNoteBackground"
        app:srcCompat="@android:drawable/ic_menu_edit"
        app:tint="#6530D9" />


</androidx.constraintlayout.widget.ConstraintLayout>