<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.NoteFragment">



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:context=".view.fragment.NoteFragment">


            <Button
                android:id="@+id/button1"
                android:layout_width="149dp"
                android:layout_height="58dp"
                android:fontFamily="@font/syncopate_bold"
                android:radius="20sp"
                android:src="@drawable/gradient_white"
                android:text="@string/skapa_ny"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:backgroundTint="#6530D9"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.796"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.665"
                app:shapeAppearanceOverlay="@style/roundedImageView" />

            <!--            android:textAllCaps="false"-->
            <Button
                android:id="@+id/button2"
                android:layout_width="149dp"
                android:layout_height="58dp"
                android:fontFamily="@font/syncopate_bold"
                android:radius="20sp"
                android:text="@string/visa_alla"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:backgroundTint="#6530D9"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.187"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.665"
                app:shapeAppearanceOverlay="@style/roundedImageView" />

            <TextView
                android:id="@+id/subjectDescription"
                android:layout_width="330dp"
                android:layout_height="82dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/comfortaa_regular"
                android:src="@drawable/gradient_white"
                android:text="@string/subjectDescription"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.064"
                app:shapeAppearanceOverlay="@style/roundedImageView" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="373dp"
                android:layout_height="455dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.713"
                app:srcCompat="@drawable/note" />


        </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

</layout>